# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../multimodalinput_mini.gni")

ohos_prebuilt_etc("pointer_motion_acceleration_config") {
  source = "pointer_motion_acceleration_config.json"

  relative_install_dir = "multimodalinput"

  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
}

group("input_system_etc") {
  if (input_feature_mouse) {
    deps = [
      ":pointer_motion_acceleration_config",
    ]
  }
}
