# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

group("patch_packages") {
  deps = [
    "diff_libinput_mmi:libinput-third-mmi",
    "prebuild_eudev:prebuild_eudev",
    "prebuild_x_keyboard_config:prebuild_x_keyboard_config",
  ]

  if (is_mmi_have_hdf) {
    deps += [
      "diff_libevdev_hdf:libevdev-hdf",
      "diff_mtdev_hdf:libmtdev-hdf",
    ]
  }

  if (is_mmi_have_libinput) {
    deps += [
      "prebuild_libinput:prebuild_libinput",
      "//third_party/eudev:libudev",
      "//third_party/eudev:udev_conf",
      "//third_party/eudev:udevd",
      "//third_party/eudev:udevd.rc",
    ]
  }
}
